--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 matplotlib==3.10.0
-numpy==2.2.2
-qiskit==1.3.1
-qiskit-ibm-runtime==0.34.0
-qiskit-aer==0.16.0
-scipy==1.15.1
+numpy==2.3.1
+python-dotenv==1.1.1
+qiskit==2.1.0
+qiskit-ibm-runtime==0.40.1
+qiskit-aer==0.17.1
+scipy==1.16.0
+jupyter
